--- a/index.html
+++ b/index.html
@@ -6,242 +6,42 @@
 <head>
 
   <meta charset="utf-8">
-  <title></title>
+  <title>get flexy</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
-  <header>
-
-  </header>
-  <div role="main">
 
 
-<section>
-<article>
-<h2>Dad’s Potato Salad
-
-<svg class="icon" version="1.1"
-   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-   x="0px" y="0px" width="72px" height="73px" viewBox="0 0 72 73" overflow="visible" enable-background="new 0 0 72 73"
-   xml:space="preserve">
-<defs>
-</defs>
-<path fill="#7AC943" d="M35.841,0C16.047,0,0,16.046,0,35.841c0,19.794,16.047,35.841,35.841,35.841
-  c19.795,0,35.841-16.047,35.841-35.841C71.682,16.046,55.636,0,35.841,0z M53.329,18.741C51.05,28.64,37.91,48.979,34.91,57.859
-  c-0.12,0.36-0.42,0.48-0.78,0.48c-1.38,0-3.84-2.58-3.84-5.7c0-7.74,3.9-22.199,3.9-32.399c0-2.28-0.42-3.24-1.32-3.6
-  c-4.08,0.18-10.14,12.54-10.14,19.979c0,2.64,0.78,4.68,2.76,5.22c0.66,0.18,0.96,0.54,0.96,0.84c0,0.3-0.359,0.6-1.14,0.6
-  c-5.04,0-7.02-4.979-7.02-9c0-8.34,6.659-19.319,13.499-19.319c3.54,0,7.32,1.98,7.32,7.14c0,7.14-2.521,21.06-3.601,29.579
-  c3.42-8.939,10.5-24.059,12.36-35.339c0.18-0.96,1.02-1.439,2.1-1.439c1.56,0,3.42,1.08,3.42,3.06
-  C53.39,18.201,53.39,18.5,53.329,18.741z"/>
-</svg></h2>
-
-<h3>From Michael Moss</h3> 
-
-   <p>Some foods are indeed seasonal and in our house Potato Salad marks the beginning of summer at home. It is unclear whether it is loved for its flavor or its reminder of warm days ahead however, this dish is a family favorite and is made with the simplest of ingredients. The method was first used by my mother who made the same recipe.</p>
- 
-   <p>Everybody has their own favorite potato salad.  We have a friend in Vermont who tolerates store-bought potato salad only if horseradish is dolloped on top--a delightful addition we might add! While the ingredients may be the same, it is still a taste as you go dish. Quantities vary and potatoes differ. To the seasoned cook, adjustments for both are easily made, but not easy to convey in recipes.   I believe this dish may be different each time it is made  --- more or less salt, too much onion --- but to our family members (and happily so) it always tastes good.</p>  
+<div class="flex-item">
+    <nav>
+		<div class="navi">I'm fucking number one!</div>
+    	<div class="navi"></div>
+    </nav>
+</div>
 
 
-<h4>Ingredients</h4>
+<div class="flex-item">
+	<div class="main">
+	<header>I'm flipping number two!</header>
+		<section>
+			<article></article>
+			<article></article>
+		</section>
+	</div>
+</div>
+	
 
-    <ul>
-
-        <li>8 to 10 Red Bliss medium to small potatoes, boiled until fork tender</li>
-        <li>1 Sweet onion, medium to large, chopped</li>
-        <li>4 to 5 Hardboiled eggs, chopped</li>
-        <li>Hellmann’s Mayonnaise</li>
-        <li>Yellow mustard</li>
-        <li>Salt</li>
-        <li>Course ground pepper</li>
-
-    </ul>
-
- <p>After cooking potatoes, cool to a warm temperature, peel and cut into chunks, placing in a large mixing bowl. Add to this all of the  chopped eggs and diced onion.</p>
+<div class="flex-item">
+	<aside>I'm three for fuck-sake!</aside></div>
 
 
- <p>When all ingredients are combined, begin to season with salt from a shaker.   (Do not add by teaspoon or tablespoon. This will concentrate the salt too much.)  Sprinkle over ingredients, tasting occasionally to determine when the right saltiness is reached.   Add course ground pepper to taste, in the same fashion. (When adding seasonings, mustard and mayonnaise,  take care to fold ingredients together gently; be careful not to mash potatoes.  If you have overcooked the potatoes, mixing will crumble them, so err on the side of under cooking.)</p>
-
- <p>Add the mustard in squirts or by teaspoons. Generally, no more than about a healthy tablespoon or two is added, but I recommend also tasting as you go. Too much mustard will result in a vinegary flavor.</p> 
-
- <p>The mayonnaise should be added like the mustard. Amounts vary depending on the number of potatoes used, but I generally use at least a ½ cup  to 3/4 cup of mayonnaise.  Mix as you add this to the salad. Too much mayonnaise effects flavor and changes the texture of the egg. Do not let the mixture become too creamy.</p> 
-
- <p>The final step after mixing all ingredients is to taste for salt again. Add salt if necessary.</p> 
-
- <p>Honor the use of good ingredients.  Use good fresh potatoes.  For this recipe, Hellmann’s mayonnaise is a must.  It has its own flavor and contributes heavily to the taste.</p>
-
- <p>Try to make it the salad the same day you want to eat it. Preparation takes about 1 hour from the boil of potatoes, chopping and assembly.  Cold potatoes do not absorb flavor. Do not cook potatoes ahead, refrigerate, and try to assemble the next day. The warmth of the potatoes seems to be important for absorbing salt, onion and mustard flavors.</p>
-
- <p>When storing the salad, cover tightly. The onion will become more aromatic and stronger if exposed to air in storage.  Cover the salad with saran over its surface and then put on a airtight cover.</p>   
-
- <p>Even with repeated making of this dish for 35 years, I invariable serve with a spoon in one hand, and warn:  “This may need salt”. Nobody seems to think so, but my cook’s alert has become part of the recipe.</p>  
-</article>
-<article>
-  
-<h2>Dad’s Caesar Salad</h2>
-<h3>From Russ Clapper</h2>
-
-<p>This salad is really from our friend Russ Clapper, but has been fixed so often, that Charlie has named it: “Dad’s”. It has become a Christmas Eve supper tradition in our home.</p> 
-
-<h4>Ingredients</h4>   
-
-    <ul>
-    
-    <li>1 Clove garlic, minced finely</li>
-    <li>1/4 Cup olive oil</li>
-    <li>1 Tablespoon Worcester sauce</li>
-    <li>3/4 Teaspoon salt</li>
-    <li>1/4 Teaspoon black pepper</li>
-    <li>1 Head each of Iceberg and Romaine lettuce, broken into 
-bite-sized pieces</li>
-    <li>1 Egg</li>
-    <li>1/4 Cup lemon juice (may add more to taste)</li>
-    <li>1/4 Cup crumbled blue cheese (may use more to taste)</li>
-    <li>1/4 Cup grated Parmesan
-  <li>Croutons</li>
-    
-    </ul>
-
-<p>Mince garlic and drop into ¼ cup olive oil. Add Worcester, salt and pepper. Set aside.</p>
-
-
-<p>Prepare greens and place in a wide salad bowl, suitable for easy mixing. </p> 
-
-
-<p>Drizzle seasoned oil over lettuce, and toss until leaves glisten. Break whole raw egg onto greens, then pouring lemon juice over all. Toss until egg is mixed through. Sprinkle crumbled blue cheese over greens, tossing thoroughly. Serve at once topped with croutons and grated Parmesan cheese.</p> 
-
-</article>
-
-</section>
-
-  </div>
-  <footer>
-
-  </footer>
 
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
 </body>
-</html>
-
-=======
-=======
->>>>>>> 2dc90831ae162926adacaa052c5332e09a53c5fb
-=======
->>>>>>> 2dc90831ae162926adacaa052c5332e09a53c5fb
-	<meta charset="utf-8">
-	<title>Homepage for the book 'Sass and Compass for designers'</title>
-	<meta name="description" content="Learn how to use the CSS preprocessor Sass and its companion authoring framework Compass">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="css/styles.css">
-	<script src="js/modernizr.2.6.2.min.js"></script>
-</head>
-<body>
-	<header role="banner">
-		<h1 class="main-link-headline"><a href="/">Sass <i>&amp;</i> Compass <span class="main-link-headline-strap">for designers</span></a></h1>
-		<a class="main-link color-one" href="#">Buy at Amazon</a>
-		<a class="main-link color-two" href="#">Buy at Packt</a>
-		<a class="main-link color-three" href="http://twitter.com/sassandcompass">Twitter</a>
-		<a class="main-link color-four" href="errata.html">Errata</a>
-		<a class="main-link color-five" href="sassandcompass-source-code.zip">Source Code</a>
-	</header>
-	<nav role="navigation">
-		<ul class="chapter-list">
-			<li class="chapter-summary">
-				<a href="chapter1.html">
-					<b>Chapter 1</b>
-					<span>Getting started with Sass and Compass</span>
-				</a>
-			</li>
-			<li class="chapter-summary">
-				<a href="chapter2.html">
-					<b>Chapter 2</b>
-					<span>Your first Sass and Compass project</span>
-				</a>
-			</li>
-			<li class="chapter-summary">
-				<a href="chapter3.html">
-					<b>Chapter 3</b>
-					<span>Nesting, Extend, Placeholders &amp; Mixins</span>
-				</a>
-			</li>
-			<li class="chapter-summary">
-				<a href="chapter4.html">
-					<b>Chapter 4</b>
-					<span>Manipulate color with ease</span>
-				</a>
-			</li>
-			<li class="chapter-summary">
-				<a href="chapter5.html">
-					<b>Chapter 5</b>
-					<span>Fluid and flexible grids with Sass, Compass and Susy</span>
-				</a>
-			</li>
-			<li class="chapter-summary">
-				<a href="chapter6.html">
-					<b>Chapter 6</b>
-					<span>Advanced media queries with Sass, Compass and Mixins</span>
-				</a>
-			</li>
-			<li class="chapter-summary">
-				<a href="chapter7.html">
-					<b>Chapter 7</b>
-					<span>Easy CSS3, image sprites and more with Compass</span>
-				</a>
-			</li>
-			<li class="chapter-summary">
-				<a href="chapter8.html">
-					<b>Chapter 8</b>
-					<span>Using programmatic logic in Sass</span>
-				</a>
-			</li>
-			<li class="chapter-summary">
-				<a href="chapter9.html">
-					<b>Chapter 9</b>
-					<span>Becoming a Sass and Compass power user</span>
-				</a>
-			</li>
-		</ul>
-
-	</nav>
-	<div role="main" class="main-content">
-		<h1 class="headline">Sass <i>&amp;</i> Compass <span class="headline-strap">for designers</span></h1>
-		<p>Learn how to easily write more maintainable CSS with the <a href="http://sass-lang.com">Sass</a> preprocessor and it's companion authoring framework <a href="http://compass-style.org">Compass</a>.</p>
-		<p>Whilst Sass and Compass may initially seem complex this book clearly explains the core concepts and tools in layman's terms (if you can write CSS and HTML, you can easily master Sass and Compass) so that you can get to grips with the awesome power of Sass and Compass and start writing CSS that is more modular, maintainable and easier to write than ever before.</p>
-		<aside class="testimonial">
-			<img src="img/book.png" alt="Sass and Compass for designers book image"/>
-			<blockquote>Easily the best book about Sass and Compass he's ever written...
-				<footer>Ben's Mum</footer>
-			</blockquote>
-		</aside>
-		<section>
-			<ul class="purchase-links-wrapper">
-				<li class="purchase-link">
-					<a class="buy-amazon-us ir" href="http://amazon.com">Amazon US</a>
-				</li>
-				<li class="purchase-link">
-					<a class="buy-amazon-uk ir" href="http://amazon.co.uk">Amazon UK</a>
-				</li>
-				<li class="purchase-link">
-					<a class="buy-barnes-and-noble ir" href="http://barnesandnoble.com">Barnes and Noble</a>
-				</li>
-				<li class="purchase-link">
-					<a class="buy-packt ir" href="http://packtpub.com">Packt</a>
-				</li>
-			</ul>
-		</section>
-	</div>
-	<footer role="contentinfo">
-		<p class="copyright">&copy; Ben Frain, 2013. All rights reserved.</p>
-	</footer>
-
-	<script src="js/plugins.js"></script>
-	<script src="js/main.js"></script>
-
-</body>
-
 </html>
 
